<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/signupnew33">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobil"
        android:textSize="20sp"
        android:inputType="number"
        android:id="@+id/username"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/edittext_modified_states"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dip"
        android:singleLine="true"
        android:paddingTop="10dip"

        android:paddingLeft="15dp"
        android:paddingBottom="10dip"
        android:layout_marginTop="231dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/loginpassword"
        android:layout_alignStart="@+id/loginpassword"
        android:layout_alignRight="@+id/loginpassword"
        android:layout_alignEnd="@+id/loginpassword" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:id="@+id/loginpassword"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dip"
        android:layout_marginTop="5dp"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:paddingBottom="10dip"


        android:layout_below="@+id/username"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:layout_below="@+id/loginpassword"
        android:textColor="#fff"
        android:textSize="15sp"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:paddingRight="10dp"
        android:paddingTop="9dip"
        android:paddingBottom="10dip"
        android:layout_marginTop="5dp"
        android:id="@+id/forgotpassword"
        android:layout_toRightOf="@+id/cbShowPwd"
        android:layout_toEndOf="@+id/cbShowPwd" />
    <CheckBox
        android:id="@+id/cbShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="4dip"
        style="@style/CustomCheckBox"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@+id/loginpassword"
        android:text="@string/show_pwd" />



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"

        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clickable="true"
            android:textColor="#fff"
            android:id="@+id/login"

            android:background="@drawable/custome_ripple"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />




    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"

        android:background="@drawable/custome_ripple"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/newsignup"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login"
         />

    </RelativeLayout>
</RelativeLayout>