<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/signupnew33">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:id="@+id/name"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/edittext_modified_states"
        android:drawableLeft="@drawable/ic_account_circle"
        android:drawablePadding="10dip"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"

        android:paddingBottom="10dip"
        android:layout_marginTop="211dp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:id="@+id/email"

        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dip"
        android:layout_marginTop="5dp"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:paddingBottom="10dip"


        android:layout_below="@+id/name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:id="@+id/loginpassword"
        android:inputType="textVisiblePassword"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dip"
        android:layout_marginTop="5dp"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:paddingBottom="10dip"


        android:layout_below="@+id/email"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verifyotp"
        android:textSize="20sp"
        android:id="@+id/otp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_check_box"
        android:drawablePadding="10dip"
        android:layout_marginTop="5dp"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:paddingBottom="10dip"


        android:layout_below="@+id/loginpassword"/>







        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:background="@drawable/custome_ripple"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="#fff"
            android:id="@+id/signup"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/otp" />


</RelativeLayout>