<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/signupnew">




    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/newpassword"
    android:textSize="20sp"
    android:id="@+id/loginpassword"
    android:inputType="textVisiblePassword"
    android:layout_marginRight="20dp"
    android:layout_marginTop="211dp"
    android:background="@drawable/edittext_modified_states"
    android:layout_marginLeft="20dp"
    android:textColor="#fff"
    android:textColorHint="#FFFFFF"
    android:singleLine="true"
    android:drawableLeft="@drawable/ic_key"
    android:drawablePadding="10dip"
    android:paddingTop="10dip"
    android:paddingLeft="15dip"
    android:paddingBottom="10dip"
    />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="20sp"
        android:id="@+id/confirmpassword"
        android:inputType="textVisiblePassword"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dip"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dip"
        android:layout_below="@+id/loginpassword"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verifyotp"
        android:textSize="20sp"
        android:id="@+id/otp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_check_box"
        android:drawablePadding="10dip"
        android:layout_marginTop="5dp"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:paddingBottom="10dip"


        android:layout_below="@+id/confirmpassword"/>







    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chage_password"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/custome_ripple"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:clickable="true"
        android:textColor="#fff"
        android:id="@+id/changepassword"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/otp" />


</RelativeLayout>