<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehiclesdetails"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="VEHICLES DETAILS"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle"
                android:text="Vehicle"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_weight="50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/basefare"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:text="Basefare"
                android:gravity="center"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#CC668566"
            android:layout_height="0.8dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehiclesdetails"
        android:id="@+id/distancedetails"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="DISTANCE CHARGE"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/distancecharge"
                android:text="Vehicle"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_weight="50"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#CC668566"
            android:layout_height="0.8dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extradetails"
        android:layout_below="@+id/distancedetails"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_weight="70"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/transit"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="charge"
                android:padding="5dp"
                android:id="@+id/surcharge"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_weight="70"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/labourCh"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="charge"
                android:padding="5dp"
                android:id="@+id/labourcharge"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_weight="70"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/closing"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="charge"
                android:padding="5dp"
                android:id="@+id/closedbodycharge"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#CC668566"
        android:layout_height="0.8dp"
        android:layout_marginTop="5dp"
        android:id="@+id/border"
        android:layout_below="@+id/extradetails"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finaldetails"
        android:layout_below="@+id/border"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ESTIMATED FARE"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/estimatedfare"
                android:text="Vehicle"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_weight="50"
                />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/finaldetails"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="Toll charges and Parking charges extra"
        />
</RelativeLayout>
